# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([basys2k-display], [0.0.20220425], [Simon.Richter@hogyros.de])
AM_INIT_AUTOMAKE([1.10 foreign])

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
